versions/v4.2.0/doxygen/html/structmqtt__pubcomp__param.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/structmqtt__pubcomp__param.html
original_path: doxygen/html/structmqtt__pubcomp__param.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

mqtt\_pubcomp\_param Struct Reference

[Connectivity](group__connectivity.md) » [Networking](group__networking.md) » [MQTT Client library](group__mqtt__socket.md)

Parameters for MQTT publish complete (PUBCOMP).
[More...](#details)

`#include <[zephyr/net/mqtt.h](mqtt_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) | [message\_id](#ae8484ad4d62f953ecace6c990002e316) |
|  | Message id of the PUBREL message being acknowledged. |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | [reason\_code](#a4e969aeee8c66a10e23731f8fe74db93) |
|  | MQTT 5.0 reason code. |
| struct [mqtt\_common\_ack\_properties](structmqtt__common__ack__properties.md) | [prop](#a1e38cde0e4e18b091e893bf207fa6c6d) |
|  | MQTT 5.0 properties. |

## Detailed Description

Parameters for MQTT publish complete (PUBCOMP).

## Field Documentation

## [◆ ](#ae8484ad4d62f953ecace6c990002e316)message\_id

| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mqtt\_pubcomp\_param::message\_id |
| --- |

Message id of the PUBREL message being acknowledged.

## [◆ ](#a1e38cde0e4e18b091e893bf207fa6c6d)prop

| struct [mqtt\_common\_ack\_properties](structmqtt__common__ack__properties.md) mqtt\_pubcomp\_param::prop |
| --- |

MQTT 5.0 properties.

## [◆ ](#a4e969aeee8c66a10e23731f8fe74db93)reason\_code

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) mqtt\_pubcomp\_param::reason\_code |
| --- |

MQTT 5.0 reason code.

---

The documentation for this struct was generated from the following file:

- zephyr/net/[mqtt.h](mqtt_8h_source.md)

- [mqtt\_pubcomp\_param](structmqtt__pubcomp__param.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
